# mcp-haskell

./: CHANGELOG.md  LICENSE  README.md  mcp-haskell.cabal
examples/: Echo.hs  Everything.hs
src/MCP/: JsonRpc.hs  Server.hs  Types.hs
src/MCP/Transport/: Http.hs  Stdio.hs
test/: Spec.hs
