cabal-version:   3.0
name:            mcp-haskell
version:         0.1.0.0
synopsis:        Model Context Protocol (MCP) SDK for Haskell
description:
  A Haskell implementation of the Model Context Protocol (MCP),
  enabling Haskell applications to serve tools, resources, and
  prompts to LLM hosts like Claude. Supports STDIO and Streamable
  HTTP transports.
  .
  Implements the MCP specification (2025-11-25) with:
  .
  * JSON-RPC 2.0 message layer
  * Tool, Resource, and Prompt primitives
  * STDIO transport for local servers
  * Streamable HTTP transport with SSE for remote servers
  * Server framework with handler registration

homepage:        https://github.com/kellybrower/mcp-haskell
bug-reports:     https://github.com/kellybrower/mcp-haskell/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          kr_brower
maintainer:      kr_brower
copyright:       2026 kr_brower
category:        Network, AI
build-type:      Simple
extra-doc-files: CHANGELOG.md
tested-with:     GHC == 9.8.4

source-repository head
  type:     git
  location: https://github.com/kellybrower/mcp-haskell.git

library
  exposed-modules:
    MCP.JsonRpc
    MCP.Types
    MCP.Server
    MCP.Transport.Stdio
    MCP.Transport.Http

  build-depends:
    , aeson                >=2.1   && <2.3
    , base                 >=4.18  && <5
    , bytestring           >=0.11  && <0.13
    , containers           >=0.6   && <0.8
    , http-types           >=0.12  && <0.13
    , stm                  >=2.5   && <2.6
    , text                 >=2.0   && <2.2
    , unordered-containers >=0.2   && <0.3
    , uuid                 >=1.3   && <1.4
    , vector               >=0.13  && <0.14
    , wai                  >=3.2   && <3.3
    , warp                 >=3.3   && <3.5

  hs-source-dirs:  src
  default-language: GHC2021
  ghc-options:     -Wall

executable mcp-example-echo
  main-is:         Echo.hs
  hs-source-dirs:  examples
  build-depends:
    , aeson       >=2.1  && <2.3
    , base        >=4.18 && <5
    , mcp-haskell
    , text        >=2.0  && <2.2

  default-language: GHC2021
  ghc-options:     -Wall -threaded

executable mcp-everything-server
  main-is:         Everything.hs
  hs-source-dirs:  examples
  build-depends:
    , aeson       >=2.1  && <2.3
    , base        >=4.18 && <5
    , mcp-haskell
    , text        >=2.0  && <2.2
    , time        >=1.12 && <1.15

  default-language: GHC2021
  ghc-options:     -Wall -threaded

test-suite mcp-haskell-test
  type:            exitcode-stdio-1.0
  main-is:         Spec.hs
  hs-source-dirs:  test
  build-depends:
    , aeson       >=2.1  && <2.3
    , base        >=4.18 && <5
    , bytestring  >=0.11 && <0.13
    , containers  >=0.6  && <0.8
    , mcp-haskell
    , stm         >=2.5  && <2.6
    , text        >=2.0  && <2.2

  default-language: GHC2021
  ghc-options:     -Wall -threaded
